// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  className="  "
>
  <span>
    <span>
      121
    </span>
  </span>
</div>
`;

exports[`Storyshots Circle Default 1`] = `
<div
  className=" "
>
  <span />
</div>
`;

exports[`Storyshots Slider Default 1`] = `
<div
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className=" "
  >
    <span>
      240
    </span>
  </div>
  <div
    className="  "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%)",
      }
    }
  >
    <span>
      240
    </span>
  </div>
</div>
`;

exports[`Storyshots Slider Validation Float 1`] = `
<div
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className=" "
  >
    <span>
      240
    </span>
  </div>
  <div
    className="  "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%)",
      }
    }
  >
    <span>
      240
    </span>
  </div>
</div>
`;

exports[`Storyshots Slider Validation Invert 1`] = `
<div
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className=" "
  >
    <span>
      240
    </span>
  </div>
  <div
    className="  "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%)",
      }
    }
  >
    <span>
      240
    </span>
  </div>
</div>
`;

exports[`Storyshots Slider Validation Negative 1`] = `
<div
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className=" "
  >
    <span>
      240
    </span>
  </div>
  <div
    className="  "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%)",
      }
    }
  >
    <span>
      240
    </span>
  </div>
</div>
`;
